# alignment_viewer

./: .gitignore  CMakeLists.txt  README.md  fetch_libs.sh  notes.md  run_cmake.sh  to_do.md
.ipynb_checkpoints/: jupyter_editor-checkpoint.ipynb
sample/: bad_first_line.phylip  in.phylip  in_2.phylip  long_sequences.phylip  many_entries.phylip
src/: CMakeLists.txt  av.cpp  phylip.cpp  phylip.hpp
src/.ipynb_checkpoints/: av-checkpoint.cpp
